Fix collapsing price on ios

--- a/static/assets/Yves/styleguide/assets/scss/components/atoms/product-options/mobile-options.scss
+++ b/static/assets/Yves/styleguide/assets/scss/components/atoms/product-options/mobile-options.scss
@@ -71,6 +71,7 @@
 }
 
 .mobile-options__description{
+    flex-grow: 1;
     padding: 12px;
     border-right: 1px solid #ECECEC;
 }
